--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/2. 发送短信验证码.md
@@ -420,3 +420,11 @@ d10）使用输出结果组件输出验证码发送成功信息。
 a）对接口进行测试用例，检验接口实现的功能是否可以达到预期。
 
 ![2-67](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_67.png)
+
+##### 图2-67 使用测试用例
+
+b）填写接收验证码的手机号，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可。
+
+![2-68](https://www.feisuanyz.com/fsimage/alcj-image/sendmessage/send_68.png)
+
+##### 图2-68 启用可视化日志
