--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -1,1 +1,5 @@
-test
+### 3. 实现商家APP下单调起微信支付功能
+
+#### 3.1 实现商家APP下单调起微信支付功能
+
+微信支付是我们日常生活中一种常见的支付方式，拥有自主APP的商家为了满足顾客的多重支付方式需求，通常会考虑接入微信支付功能。本节实例将以展示利用全自动开发平台实现商家APP下单调起微信支付功能作为示例来介绍全自动开发平台的使用，实例主要用到了全自动开发平台中的单函数组件、HTTP组件、互斥条件组件。通过拖拽方式绘制流程图并进行参数配置等同于编写复杂代码的业务逻辑，业务逻辑可视化展示，相对于写代码，用户可以更加轻松地进行功能实现。
