--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -11,3 +11,9 @@
 ![3-1](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_2-1.png)
 
 ##### 图3-1 响应内容页面
+
+##### 注意：本实例仅针对后端程序开发，若与前端程序联合使用，可展示更加明显的效果，即可看到微信支付页面。
+
+##### 3.1.2 准备工作
+
+a）若您想要实际完成APP下单调起微信支付的功能，您需要提前注册微信支付商户号，如图3-1所示。注册好商户号后，进行下载并配置商户证书的操作，获取证书序列号及相应的证书存放路径，如图3-2所示。这三个参数（商户号、证书序列号、证书存放路径）将在接下来的开发过程中用到。
