--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -41,3 +41,11 @@ APP调起支付API文档地址：https://pay.weixin.qq.com/wiki/doc/apiv3/apis/c
 ##### 图3-4 APP下单API文档页面
 
 ![3-5](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_3-4.png)
+
+##### 图3-5 APP调起支付API文档页面
+
+c）上一步所需请求参数中的应用ID，即appid，需通过微信开发平台（open.weixin.qq.com）审核后获取，如图3-6所示：
+
+![3-6](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_3-5.png)
+
+##### 图3-6 AppID获取流程
