--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -49,3 +49,11 @@ c）上一步所需请求参数中的应用ID，即appid，需通过微信开发
 ![3-6](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_3-5.png)
 
 ##### 图3-6 AppID获取流程
+
+##### 3.1.3 流程图设计概览
+
+![3-7](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_4-1.png)
+
+##### 图3-7 接口流程图（上）
+
+![3-8](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_4-2.png)
