--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -57,3 +57,13 @@ c）上一步所需请求参数中的应用ID，即appid，需通过微信开发
 ##### 图3-7 接口流程图（上）
 
 ![3-8](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_4-2.png)
+
+##### 图3-8 接口流程图（下）
+
+逻辑描述：
+
+a）为APP下单请求参数赋值。
+
+b）将实体模型AppPay的参数值（即APP下单请求参数）的数据类型转换为Json字符串，便于后续作为请求报文主体。
+
+c）获取wechat支付token，用于拼接APP下单请求头信息。
