--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -67,3 +67,13 @@ a）为APP下单请求参数赋值。
 b）将实体模型AppPay的参数值（即APP下单请求参数）的数据类型转换为Json字符串，便于后续作为请求报文主体。
 
 c）获取wechat支付token，用于拼接APP下单请求头信息。
+
+d）拼接APP下单请求头。
+
+e）进行APP下单操作。
+
+f）根据状态码值判断APP下单是否成功，若APP下单失败，则输出APP下单失败信息；若APP下单成功，则继续以下流程。
+
+g）获取当前时间戳，用于后续生成微信支付签名及作为APP下单调起微信支付的参数之一。
+
+h）获取32位随机编码，用于后续生成微信支付签名及作为APP下单调起微信支付的参数之一。
