--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -87,3 +87,11 @@ k）将拼接好的参数输出。
 ##### 3.1.4 操作步骤
 
 a）创建实体模型：AppPay
+
+进入全自动开发平台“实体模型”功能模块，新增“AppPay”（APP下单请求参数）的实体模型，用于后续APP下单请求参数的赋值（参考微信支付APP下单API文档中请求参数进行创建）。
+
+![3-9](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-1.png)
+
+##### 图3-9 实体模型功能模块
+
+![3-10](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-2.png)
