--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -95,3 +95,11 @@ a）创建实体模型：AppPay
 ##### 图3-9 实体模型功能模块
 
 ![3-10](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-2.png)
+
+##### 图3-10 创建AppPay实体模型
+
+b）创建接口：APP下单调起微信支付
+
+进入全自动开发平台“接口管理”功能模块，新增一个接口，填写接口的基本信息，单击“下一步”。
+
+![3-11](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-3.png)
