--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -103,3 +103,11 @@ b）创建接口：APP下单调起微信支付
 进入全自动开发平台“接口管理”功能模块，新增一个接口，填写接口的基本信息，单击“下一步”。
 
 ![3-11](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-3.png)
+
+##### 图3-11 接口管理功能模块
+
+![3-12](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-4.png)
+
+##### 图3-12 填写接口的基本信息
+
+c）配置入口参数
