--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -111,3 +111,11 @@ b）创建接口：APP下单调起微信支付
 ##### 图3-12 填写接口的基本信息
 
 c）配置入口参数
+
+此处同样需参考微信支付APP下单API文档中的请求参数进行配置，包含直连商户号、应用ID、商户订单号、通知地址、订单金额信息等，配置完成后，单击“提交”即可。
+
+![3-13](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-5.png)
+
+##### 图3-13 入口参数配置
+
+d）模型编辑
