--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -119,3 +119,11 @@ c）配置入口参数
 ##### 图3-13 入口参数配置
 
 d）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑）。
+
+![3-14](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-6.png)
+
+##### 图3-14 进入模型编辑
+
+![3-15](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-7.png)
