--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -133,3 +133,11 @@ d）模型编辑
 注意：请确保所需组件在组件列表中已存在，否则需先加载好所需组件后再进行流程图的设计，关于加载组件可参考[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
 
 e）组件的具体配置
+
+e1）使用赋值组件为APP下单请求参数赋值，数据模型选择实体模型AppPay，同时引用接口参数为实体模型赋值，currency（货币类型）填写CNY，表示人民币。
+
+![3-16](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-8.png)
+
+##### 图3-16 赋值组件【APP下单请求参数赋值】
+
+![3-17](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-9.png)
