--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -141,3 +141,11 @@ e1）使用赋值组件为APP下单请求参数赋值，数据模型选择实体
 ##### 图3-16 赋值组件【APP下单请求参数赋值】
 
 ![3-17](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-9.png)
+
+##### 图3-17 选择数据模型
+
+![3-18](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-10.png)
+
+##### 图3-18 为数据模型赋值
+
+e2）使用单函数组件调用函数toJson(Object obj)将实体模型AppPay的参数值类型转换为Json字符串，便于后续作为请求报文主体。
