--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -157,3 +157,9 @@ e2）使用单函数组件调用函数toJson(Object obj)将实体模型AppPay的
 ![3-20](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-12.png)
 
 ##### 图3-20 函数设置
+
+e3）使用单函数组件调用函数getWeChatPayToken(String method,String url,String path,String body,String merchantId,String certificateSerialNo,boolean isForce)获取wechat支付token，用于拼接APP下单请求头信息。其中method（http请求方法）填写POST；url（APP下单请求URL）填写 https://api.mch.weixin.qq.com/v3/pay/transactions/app ；body（请求报文主体）引用单函数组件【参数类型转为Json字符串】的执行结果；merchantId（商户号）引用接口参数mchid的值；isForce（是否强制更新内存证书）设置为false。
+
+![3-21](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-13.png)
+
+##### 图3-21 获取微信支付签名Token
