--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -163,3 +163,11 @@ e3）使用单函数组件调用函数getWeChatPayToken(String method,String url
 ![3-21](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-13.png)
 
 ##### 图3-21 获取微信支付签名Token
+
+![3-22](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-14.png)
+
+##### 图3-22 函数设置1
+
+![3-23](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-15.png)
+
+##### 图3-23 函数设置2
