--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -171,3 +171,9 @@ e3）使用单函数组件调用函数getWeChatPayToken(String method,String url
 ![3-23](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-15.png)
 
 ##### 图3-23 函数设置2
+
+##### 说明：method（http请求方法）和url（APP下单请求URL）参见微信支付APP下单API文档，如图3-24所示；path（证书路径）和certificateSerialNo（证书序列号）在商户号申请下来后下载并配置商户证书获取，见[准备工作1](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/3.%20%E7%BB%BC%E5%90%88%E6%A1%88%E4%BE%8B/3.%20%E5%AE%9E%E7%8E%B0%E5%95%86%E5%AE%B6APP%E4%B8%8B%E5%8D%95%E8%B0%83%E8%B5%B7%E5%BE%AE%E4%BF%A1%E6%94%AF%E4%BB%98%E5%8A%9F%E8%83%BD.md#312-%E5%87%86%E5%A4%87%E5%B7%A5%E4%BD%9C)。
+
+![3-24](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-16.png)
+
+##### 图3-24 微信支付APP下单API文档
