--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -177,3 +177,9 @@ e3）使用单函数组件调用函数getWeChatPayToken(String method,String url
 ![3-24](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-16.png)
 
 ##### 图3-24 微信支付APP下单API文档
+
+e4）使用单函数组件调用函数concatStrs(String[] strs)拼接APP下单请求头，第一个参数值填写字符串WECHATPAY2-SHA256-RSA2048，第二个参数引用单函数组件【获取微信支付签名Token】的执行结果。
+
+![3-25](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-17.png)
+
+##### 图3-25 单函数组件【拼接APP下单请求头】
