--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -207,3 +207,10 @@ e5）使用HTTP组件进行APP下单操作，其中请求地址与[第3步APP下
 ![3-30](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-22.png)
 
 ##### 图3-30 函数设置2
+
+e6）使用互斥条件组件根据状态码值判断APP下单是否成功，状态码值通过引用HTTP组件【APP下单】的statusCodeValue（状态码值）获取，若状态码值不等于200，说明APP下单失败，输出APP下单失败信息；若状态码值等于200，说明APP下单成功，将继续以下流程。
+
+![3-31](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-23.png)
+
+##### 图3-31 判断APP是否下单成功
+
