--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -214,3 +214,8 @@ e6）使用互斥条件组件根据状态码值判断APP下单是否成功，状
 
 ##### 图3-31 判断APP是否下单成功
 
+![3-32](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-24.png)
+
+##### 图3-32 APP下单失败流转条件
+
+![3-33](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-25.png)
