--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -227,3 +227,11 @@ e6）使用互斥条件组件根据状态码值判断APP下单是否成功，状
 ##### 图3-34 APP下单成功流转条件
 
 e7）使用单函数组件调用函数dateMillis(Date sourceDate)获取当前时间戳，用于后续生成微信支付签名及作为APP下单调起微信支付的参数之一，需通过函数getCurrDateTime()传入当前系统时间。
+
+![3-35](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-27.png)
+
+##### 图3-35 单函数组件【获取当前时间戳】
+
+![3-36](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-28.png)
+
+##### 图3-36 函数设置
