--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -235,3 +235,11 @@ e7）使用单函数组件调用函数dateMillis(Date sourceDate)获取当前时
 ![3-36](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-28.png)
 
 ##### 图3-36 函数设置
+
+e8）使用单函数组件调用函数getUuid32()获取32位随机编码，用于后续生成微信支付签名及作为APP下单调起微信支付的参数之一。
+
+![3-37](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-29.png)
+
+##### 图3-37 单函数组件【获取32位随机编码】
+
+![3-38](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-30.png)
