--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -255,3 +255,11 @@ e9）使用单函数组件调用函数getWeChatAppPaySign(String appId,String ti
 ![3-40](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-32.png)
 
 ##### 图3-40 函数设置1（记录1-记录3）
+
+![3-41](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-33.png)
+
+##### 图3-41 函数设置2（记录4-记录7）
+
+![3-42](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-34.png)
+
+##### 图3-42 单函数组件【获取当前时间戳】组件编号
