--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -263,3 +263,9 @@ e9）使用单函数组件调用函数getWeChatAppPaySign(String appId,String ti
 ![3-42](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-34.png)
 
 ##### 图3-42 单函数组件【获取当前时间戳】组件编号
+
+![3-43](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-35.png)
+
+##### 图3-43 HTTP组件【APP下单】组件编号
+
+e10）使用单函数组件调用函数newMapInit(Object[] keyAndValue)用于拼接APP下单调用微信支付的相关参数（共7个），以键值对的形式展示。其中appid（应用ID）、partnerid（商户号）直接引用接口参数即可；prepayId （APP下单成功后微信返回的支付交易会话ID）同单函数组件【生成微信支付签名】中prepayId的设置方式，此处填写${Activity_1jvdk8m_functionExecuteResult.body.prepayId}；package（订单详情扩展字符串）填写固定值Sign=WXPay；noncestr（随机字符串）引用单函数组件【获取32位随机数】的执行结果；timestamp（时间戳）通过引用单函数组件【获取当前时间戳】的组件编号获取，并需要通过函数toString()转换为字符串格式；sign（签名）引用单函数组件【生成微信支付签名】的执行结果。
