--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -277,3 +277,11 @@ e10）使用单函数组件调用函数newMapInit(Object[] keyAndValue)用于拼
 ![3-45](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-37.png)
 
 ##### 图3-45 函数设置1（记录1-记录4）
+
+![3-46](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-38.png)
+
+##### 图3-46 函数设置2（记录5-记录10）
+
+![3-47](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-39.png)
+
+##### 图3-47 函数设置3（记录11-记录14）
