--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -285,3 +285,11 @@ e10）使用单函数组件调用函数newMapInit(Object[] keyAndValue)用于拼
 ![3-47](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-39.png)
 
 ##### 图3-47 函数设置3（记录11-记录14）
+
+e11）使用输出结果组件将拼接好的参数输出，直接引用单函数组件【拼接APP下单调用微信支付的相关参数】的执行结果即可。
+
+![3-48](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-40.png)
+
+##### 图3-48 输出结果组件【输出参数信息】
+
+![3-49](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-41.png)
