--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -327,3 +327,11 @@ b）编辑测试用例。
 c）录入接口参数，启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可。
 
 ![3-54](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-46.png)
+
+##### 图3-54 启用可视化日志
+
+d）通过测试用例响应内容查看接口的执行结果。
+
+![3-55](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-47.png)
+
+##### 图3-55 查看接口执行结果
