--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/3. 实现商家APP下单调起微信支付功能.md
@@ -335,3 +335,9 @@ d）通过测试用例响应内容查看接口的执行结果。
 ![3-55](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-47.png)
 
 ##### 图3-55 查看接口执行结果
+
+e）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试。
+
+![3-56](https://www.feisuanyz.com/fsimage/alcj-image/wechatpay/wcpay_6-48.png)
+
+##### 图3-56 查看可视化日志
