--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -1,1 +1,7 @@
-test
+### 4. 身份证识别
+
+#### 4.1 身份证识别
+
+本实例是结合腾讯云实现身份证识别的功能，实例仅用到了平台中的单函数组件和输出组件，可适用于实名认证APP、信用卡申请、海关物流等多种不同的业务场景。
+
+##### 4.1.1 效果展示
