--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -5,3 +5,9 @@
 本实例是结合腾讯云实现身份证识别的功能，实例仅用到了平台中的单函数组件和输出组件，可适用于实名认证APP、信用卡申请、海关物流等多种不同的业务场景。
 
 ##### 4.1.1 效果展示
+
+进入全自动开发平台“身份证识别”功能接口测试用例页面，在接口入参处上传身份证图片文件，并输入身份证文件的类型（即上传的身份证文件为正面还是反面），启动可视化日志后执行该接口，即可返回身份证图片上的个人信息，如图4-2所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/alcj-image/idcard/2_1.png)
+
+##### 图4-1 测试用例编辑页面
