--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -11,3 +11,9 @@
 ![4-1](https://www.feisuanyz.com/fsimage/alcj-image/idcard/2_1.png)
 
 ##### 图4-1 测试用例编辑页面
+
+![4-2](https://www.feisuanyz.com/fsimage/alcj-image/idcard/2_2.png)
+
+##### 图4-2 身份证信息展示
+
+##### 4.1.2 准备工作
