--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -17,3 +17,8 @@
 ##### 图4-2 身份证信息展示
 
 ##### 4.1.2 准备工作
+
+a）提前准备一个开通了文字识别服务的腾讯云账号。
+
+##### 说明：a1）关于如何注册腾讯云账号可参见[文档1（文档中心 > 账号相关 > 注册腾讯云）](https://cloud.tencent.com/document/product/378/17985)；a2）关于如何开通文字识别服务可参见[文档2（文档中心 > 文字识别 > 快速入门 > 一分钟接入服务端 API）
+](https://cloud.tencent.com/document/product/866/34681)
