--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -22,3 +22,11 @@ a）提前准备一个开通了文字识别服务的腾讯云账号。
 
 ##### 说明：a1）关于如何注册腾讯云账号可参见[文档1（文档中心 > 账号相关 > 注册腾讯云）](https://cloud.tencent.com/document/product/378/17985)；a2）关于如何开通文字识别服务可参见[文档2（文档中心 > 文字识别 > 快速入门 > 一分钟接入服务端 API）
 ](https://cloud.tencent.com/document/product/866/34681)
+
+b）需进入腾讯云控制台获取相关参数，放入全自动开发平台配置组管理中，如图4-3所示：
+
+![4-3](https://www.feisuanyz.com/fsimage/alcj-image/idcard/3_1.png)
+
+##### 图4-3 配置组展示
+
+##### 说明：此处的参数字段分别为secretId（腾讯云密钥secretId）、secretKey（腾讯云密钥secretId），其参数值均可以在腾讯云控制台获取。因本案例需与腾讯云结合使用，具体的参数值需要用户自行创建密钥，如图4-4所示：
