--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -54,3 +54,13 @@ c）将构建参数传入身份证识别函数；
 d）根据身份证识别函数返回值，构建身份证显示信息。
 
 e）使用输出结果组件输出上一步构建的身份证显示信息。
+
+##### 4.1.4 技术要点说明
+
+本案例主要通过身份证识别函数idCardOcr(Map params) 实现，函数说明如图4-6所示：
+
+![4-6](https://www.feisuanyz.com/fsimage/alcj-image/idcard/5_1.png)
+
+##### 图4-6 函数说明
+
+##### 4.1.5 操作步骤
