--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -64,3 +64,11 @@ e）使用输出结果组件输出上一步构建的身份证显示信息。
 ##### 图4-6 函数说明
 
 ##### 4.1.5 操作步骤
+
+a）新增身份证识别接口
+
+进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图4-7所示：
+
+![4-7](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_1.png)
+
+##### 图4-7 新增接口
