--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -72,3 +72,14 @@ a）新增身份证识别接口
 ![4-7](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_1.png)
 
 ##### 图4-7 新增接口
+
+b）配置接口的入口参数
+
+此处需配置String类型参数idCardType（身份证类型）用于区分身份证正反面，File类型参数idCardFile（身份证文件）用于上传身份证文件，如图4-8所示：
+
+![4-8](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_2.png)
+
+##### 图4-8 配置接口入参
+
+c）模型编辑
+
