--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -83,3 +83,12 @@ b）配置接口的入口参数
 
 c）模型编辑
 
+单击“进入模型编辑”，您可以在窗体视图页面，通过拖拽左侧组件列表中的组件进行接口流程图的设计，如图4-9、图4-10所示：
+
+![4-9](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_3.png)
+
+##### 图4-9 进入模型编辑器
+
+![4-10](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_4.png)
+
+##### 图4-10 模型编辑器
