--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -92,3 +92,13 @@ c）模型编辑
 ![4-10](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_4.png)
 
 ##### 图4-10 模型编辑器
+
+d）组件的具体配置（按逻辑描述展示）
+
+d1）将上传的身份证图片文件转换为base64字符串。
+
+使用单函数组件调用函数getFileToBase64(File file)，需传入接口参数idCardFile（身份证文件）。
+
+![4-11](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_5.png)
+
+##### 图4-11 单函数组件【文件转base64】
