--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -102,3 +102,15 @@ d1）将上传的身份证图片文件转换为base64字符串。
 ![4-11](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_5.png)
 
 ##### 图4-11 单函数组件【文件转base64】
+
+![4-12](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_6.png)
+
+##### 图4-12 组件配置
+
+d2）构建身份证识别函数所需的参数。
+
+具体可参见函数说明，其中imageBase64（图片的Base64 值）参数值引用上一步单函数组件【文件转base64字符串】的执行结果，cardSid（身份证正反面）引用接口参数idCardType（身份证类型），secretId（腾讯云密钥secretId）以及secretKey（腾讯云密钥secretId）引用配置组参数值即可。
+
+![4-13](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_7.png)
+
+##### 图4-13 单函数组件【构建身份证所需参数】
