--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -114,3 +114,11 @@ d2）构建身份证识别函数所需的参数。
 ![4-13](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_7.png)
 
 ##### 图4-13 单函数组件【构建身份证所需参数】
+
+![4-14](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_8.png)
+
+##### 图4-14 调用构建Map函数
+
+![4-15](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_9.png)
+
+##### 图4-15 赋值参数1（记录1-记录4）
