--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -122,3 +122,13 @@ d2）构建身份证识别函数所需的参数。
 ![4-15](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_9.png)
 
 ##### 图4-15 赋值参数1（记录1-记录4）
+
+![4-16](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_10.png)
+
+##### 图4-16 赋值参数2（记录5-记录8）
+
+d3）将构建参数传入身份证识别函数，直接引用单函数组件【构建身份证所需要的参数】的执行结果即可。
+
+![4-17](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_11.png)
+
+##### 图4-17 单函数组件【身份证识别】
