--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -132,3 +132,13 @@ d3）将构建参数传入身份证识别函数，直接引用单函数组件【
 ![4-17](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_11.png)
 
 ##### 图4-17 单函数组件【身份证识别】
+
+![4-18](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_12.png)
+
+##### 图4-18 组件配置
+
+d4）根据身份证识别函数返回值，构建身份证显示信息，通过调用新建Map函数进行构建，如下图所示：
+
+![4-19](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_13.png)
+
+##### 图4-19 单函数组件【构建身份证返回信息】
