--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -142,3 +142,9 @@ d4）根据身份证识别函数返回值，构建身份证显示信息，通过
 ![4-19](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_13.png)
 
 ##### 图4-19 单函数组件【构建身份证返回信息】
+
+##### 说明：身份证识别函数返回值可以参见技术要点说明中身份证识别函数的函数说明，您可以根据实际需求自行构建。本实例主要引用到了姓名（Name）、身份证号（IdNum）、地址（Address）、性别（Sex）、出生日期（Birth）信息、发证机关（Authority）以及证件有效期（ValidDate）信息，这些信息会根据上传身份证类型（即身份证正反面）进行相应的显示。此处所有参数均通过单函数组件【身份证识别】的组件编号进行赋值，组件编号如图4-20所示：
+
+![4-20](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_14.png)
+
+##### 图4-20 单函数组件【构建身份证返回信息】
