--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -148,3 +148,13 @@ d4）根据身份证识别函数返回值，构建身份证显示信息，通过
 ![4-20](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_14.png)
 
 ##### 图4-20 单函数组件【构建身份证返回信息】
+
+![4-21](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_15.png)
+
+##### 图4-21 调用构建Map函数
+
+![4-22](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_16.png)
+
+##### 图4-22 赋值参数1（记录1-记录4）
+
+![4-23](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_17.png)
