--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -158,3 +158,15 @@ d4）根据身份证识别函数返回值，构建身份证显示信息，通过
 ##### 图4-22 赋值参数1（记录1-记录4）
 
 ![4-23](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_17.png)
+
+##### 图4-23 赋值参数2（记录5-记录10）
+
+![4-24](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_18.png)
+
+##### 图4-24 赋值参数3（记录11-记录14）
+
+d5）使用输出结果组件输出上一步构建的身份证显示信息。
+
+![4-25](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_19.png)
+
+##### 图4-25 输出结果组件【输出返回信息】
