--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -170,3 +170,13 @@ d5）使用输出结果组件输出上一步构建的身份证显示信息。
 ![4-25](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_19.png)
 
 ##### 图4-25 输出结果组件【输出返回信息】
+
+##### 4.1.6 退出窗体视图
+
+流程图设计完成后，保存并退出窗体视图。
+
+![4-26](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_20.png)
+
+##### 图4-26 保存并退出
+
+##### 4.1.7 提交并发布接口
