--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -180,3 +180,13 @@ d5）使用输出结果组件输出上一步构建的身份证显示信息。
 ##### 图4-26 保存并退出
 
 ##### 4.1.7 提交并发布接口
+
+![4-27](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_21.png)
+
+##### 图4-27 提交并发布接口
+
+##### 4.1.8 测试用例
+
+a）对接口进行测试用例，检验接口实现的功能是否可以达到预期。
+
+![4-28](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_22.png)
