--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/4. 身份证识别.md
@@ -190,3 +190,15 @@ d5）使用输出结果组件输出上一步构建的身份证显示信息。
 a）对接口进行测试用例，检验接口实现的功能是否可以达到预期。
 
 ![4-28](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_22.png)
+
+##### 图4-28 进入测试用例
+
+b）输入身份证类型并上传身份证图片文件，启用可视化日志，单击执行即可。
+
+##### 说明：启用可视化日志便于查看接口流程中的数据流转。
+
+![4-29](https://www.feisuanyz.com/fsimage/alcj-image/idcard/6_23.png)
+
+##### 图4-29 编辑测试用例
+
+c）通过测试用例响应内容查看接口的执行结果，确认身份证信息是否正确识别。
