--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -1,1 +1,7 @@
-test
+### 5. 验证短信验证码
+
+#### 5.1 验证短信验证码
+
+本案例在《发送验证码功能》基础上进行，您需要做好发送短信验证码功能的准备工作并实现其功能后，再进行验证短信验证码的功能实现及测试。验证短信验证码的实现也是主要用到平台中的单函数组件、单SQL组件、互斥条件组件，通过流程图，您可以清晰地看出组件间的逻辑关系。
+
+##### 5.1.1 效果展示
