--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -5,3 +5,11 @@
 本案例在《发送验证码功能》基础上进行，您需要做好发送短信验证码功能的准备工作并实现其功能后，再进行验证短信验证码的功能实现及测试。验证短信验证码的实现也是主要用到平台中的单函数组件、单SQL组件、互斥条件组件，通过流程图，您可以清晰地看出组件间的逻辑关系。
 
 ##### 5.1.1 效果展示
+
+通过调用验证短信验证码接口，传入接收到的验证码及对应手机号后，即输出相关验证信息。
+
+本实例设置的验证码有效时长为2分钟，若超过2分钟，则输出验证码失效信息；若根本未发送过该验证码，则输出验证失败信息；否则输出验证成功信息，如下图所示：
+
+![5-1](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_1.png)
+
+##### 图5-1 编辑接口测试用例
