--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -13,3 +13,15 @@
 ![5-1](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_1.png)
 
 ##### 图5-1 编辑接口测试用例
+
+验证码失效：
+
+![5-2](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_2.png)
+
+##### 图5-2 验证码失效
+
+验证失败：
+
+![5-3](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_3.png)
+
+##### 图5-3 验证失败
