--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -25,3 +25,15 @@
 ![5-3](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_3.png)
 
 ##### 图5-3 验证失败
+
+验证成功：
+
+![5-4](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_4.png)
+
+##### 图5-4 验证成功
+
+##### 5.1.2 流程图设计概览
+
+![5-5](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_5.png)
+
+##### 图5-5 流程图概览
