--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -37,3 +37,15 @@
 ![5-5](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_5.png)
 
 ##### 图5-5 流程图概览
+
+逻辑描述：
+
+a）根据接口入参【手机号】【验证码】在短信表查询对应短信记录。
+
+b）判断短信表中是否有对应短信记录，若没有对应短信记录，则输出验证失败结果；若存在对应短信记录，则继续以下流程。
+
+c）构建查询参数【paramId】。
+
+d）根据【paramId】的值查询参数表。
+
+e）获取超时时间，即【当前短信记录的创建时间】累加【验证码有效时长】后的时间。
