--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -49,3 +49,13 @@ c）构建查询参数【paramId】。
 d）根据【paramId】的值查询参数表。
 
 e）获取超时时间，即【当前短信记录的创建时间】累加【验证码有效时长】后的时间。
+
+f）获取【当前系统时间】与【超时时间】的间隔时长。
+
+g）根据间隔时长判断验证码是否失效，若间隔时长大于0，说明验证码已超时，输出验证码失效结果；若间隔时长小于等于0，说明验证码未超时，输出验证成功结果。
+
+##### 5.1.3 操作步骤
+
+a）新增验证短信验证码接口
+
+进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息。
