--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -59,3 +59,11 @@ g）根据间隔时长判断验证码是否失效，若间隔时长大于0，说
 a）新增验证短信验证码接口
 
 进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息。
+
+![5-6](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_6.png)
+
+##### 图5-6 点击接口管理
+
+![5-7](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_7.png)
+
+##### 图5-7 填写接口基本信息
