--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -67,3 +67,11 @@ a）新增验证短信验证码接口
 ![5-7](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_7.png)
 
 ##### 图5-7 填写接口基本信息
+
+b）配置接口的入口参数
+
+此处需配置两个String类型的参数verifyCode（验证码）、receiverMobile（对应手机号），用于之后的查询操作。
+
+![5-8](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_8.png)
+
+##### 图5-8 配置入口参数
