--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -75,3 +75,11 @@ b）配置接口的入口参数
 ![5-8](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_8.png)
 
 ##### 图5-8 配置入口参数
+
+c）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑）。
+
+![5-9](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_9.png)
+
+##### 图5-9 进入模型编辑
