--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -83,3 +83,11 @@ c）模型编辑
 ![5-9](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_9.png)
 
 ##### 图5-9 进入模型编辑
+
+![5-10](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_10.png)
+
+##### 图5-10 进行模型编辑
+
+##### 5.1.4 组件的具体配置（按逻辑描述展示）
+
+a）使用单SQL组件在短信表查询对应短信记录，具体SQL内容如下，需传入接口参数。
