--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -91,3 +91,13 @@ c）模型编辑
 ##### 5.1.4 组件的具体配置（按逻辑描述展示）
 
 a）使用单SQL组件在短信表查询对应短信记录，具体SQL内容如下，需传入接口参数。
+
+![5-11](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_11.png)
+
+##### 图5-11 查询对应短信记录
+
+![5-12](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_12.png)
+
+##### 图5-12 填写数据
+
+![5-13](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_13.png)
