--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -159,3 +159,13 @@ d）使用单SQL组件根据【paramId】的值查询参数表，具体SQL内容
 e）使用单函数组件调用函数addMinute(Date sourceDate,int addValue)获取超时时间，即【当前短信记录的创建时间】累加【验证码有效时长】后的时间。
 
 ##### 说明：函数addMinute(Date sourceDate,int addValue)用于对日期值进行累加，第一个需传入的参数为日期值，即第1步中查询到的对应短信记录的创建时间createTime；第二个需传入的参数为增加日期值，即第4步中获取到的验证码有效时长参数记录的paramValue，由于需传入整型参数，而参数表中param_value的数据类型为字符型，故此处需使用函数strToInt(String)对paramValue进行类型转换。
+
+![5-23](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_23.png)
+
+##### 图5-23 获取超时时间
+
+![5-24](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_24.png)
+
+##### 图5-24 填写数据
+
+f）使用单函数组件调用函数secondsDiff(Date startDate,Date endDate)获取【当前系统时间】与【超时时间】的间隔时长。
