--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -177,3 +177,15 @@ f）使用单函数组件调用函数secondsDiff(Date startDate,Date endDate)获
 ##### 图5-25 获取间隔时长
 
 ![5-26](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_26.png)
+
+##### 图5-26 填写数据
+
+g）使用互斥条件组件根据间隔时长判断验证码是否失效，若间隔时长大于0，说明验证码已超时，输出验证码失效结果；若间隔时长小于等于0，说明验证码未超时，输出验证成功结果。
+
+![5-27](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_27.png)
+
+##### 图5-27 判断验证码是否失效
+
+![5-28](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_28.png)
+
+##### 图5-28 流转条件1
