--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -241,3 +241,13 @@ c）通过测试用例响应内容查看接口的执行结果。
 验证码失效：
 
 ![5-37](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_37.png)
+
+##### 图5-37 验证码失效
+
+验证失败：
+
+![5-38](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_38.png)
+
+##### 图5-38 验证失败
+
+d）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试。
