--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版案例场景/3. 综合案例/5. 验证短信验证码.md
@@ -251,3 +251,15 @@ c）通过测试用例响应内容查看接口的执行结果。
 ##### 图5-38 验证失败
 
 d）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试。
+
+![5-39](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_39.png)
+
+##### 图5-39 查看可视化日志
+
+![5-40](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_40.png)
+
+##### 图5-40 可视化日志
+
+![5-41](https://www.feisuanyz.com/fsimage/alcj-image/verifymessage/verify_41.png)
+
+##### 图5-41 查询节点数据
