--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
@@ -7,3 +7,11 @@
 ##### 1.1.1 前提条件
 
 a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.2 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“SQL”栏目下，找到“开始事务”和“提交事务”组件，拖拽至绘图面板，连接好组件的流程图，如图1-1、1-2所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_01.png)
