--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
@@ -15,3 +15,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）在窗体视图左侧的“组件列表”中“SQL”栏目下，找到“开始事务”和“提交事务”组件，拖拽至绘图面板，连接好组件的流程图，如图1-1、1-2所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_01.png)
+
+##### 图1-1 找到事务组件
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_02.png)
+
+##### 图1-2 连接组件流程图
+
+b）选择一个SQL组件放置在事务组件之间（此处以单SQL组件为例），为显示效果，同时也放置一个输出结果组件，连接好组件的流程图，如图1-3所示：
