--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/1. 事务组件的使用.md
@@ -41,3 +41,11 @@ d）单击“SQL信息”处未选中记录方框，如图1-5所示：
 ##### 图1-5 配置SQL信息
 
 e）进入“填写数据”页面，选择SQL名称，同时选择流程变量，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_4_04.png)
+
+##### 图1-6 选择SQL名称
+
+##### 注意：用户只能将事务组件用于新增、修改、删除SQL语句，查询SQL语句不存在事务的情况。
+
+f）SQL信息设置完成后，单击“确定”即可。
