--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/2. 分页SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/2. 分页SQL组件的使用.md
@@ -7,3 +7,15 @@
 ##### 1.2.1 前提条件
 
 a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.2.2 操作步骤
+
+a）在窗体视图左侧的“组件列表”中，找到分页SQL组件，拖拽至绘图面板，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_03.png)
+
+##### 图2-1 找到分页SQL组件
+
+b）为显示效果，选择一个“输出结果”组件拖拽至绘图面板，连接好组件的流程图，如图2-2所示：
