--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/2. 分页SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/2. 分页SQL组件的使用.md
@@ -67,3 +67,15 @@ i）“查询分页SQL信息”设置完成后，单击“确定”即可。
 j）选中输出结果组件，在“响应结果”处选择输出结果信息，如图2-9、2-10所示：
 
 ![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_10.png)
+
+##### 图2-9 选择响应结果
+
+![2-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_11.png)
+
+##### 图2-10 选择输出结果信息
+
+k）在“输出项值”处，单击“未选中记录”方框，进入“填写数据”页面，如图2-11所示：
+
+![2-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_12.png)
+
+##### 图2-11 设置输出项值
