--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/3. 单SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/3. 单SQL组件的使用.md
@@ -7,3 +7,13 @@
 ##### 1.3.1 前提条件
 
 a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.3.2 操作步骤
+
+a）在窗体视图左侧的“组件列表”中，找到单SQL组件，拖拽至绘图面板，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_01.png)
+
+##### 图3-1 找到单SQL组件
