--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
@@ -5,3 +5,11 @@
 系统提供该功能，您可以在系统中利用多SQL组件进行可视化开发。
 
 ##### 1.4.1 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.4.2 操作步骤
+
+a）在窗体视图左侧的“组件列表”中，找到多SQL组件，拖拽至绘图面板，如图4-1所示：
