--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
@@ -13,3 +13,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 1.4.2 操作步骤
 
 a）在窗体视图左侧的“组件列表”中，找到多SQL组件，拖拽至绘图面板，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_01.png)
+
+##### 图4-1 找到多SQL组件
+
+b）为显示效果，选择一个“输出结果”组件拖拽至绘图面板，连接好组件的流程图，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_02.png)
+
+##### 图4-2 连接组件流程图
