--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/1. SQL组件/4. 多SQL组件的使用.md
@@ -55,3 +55,13 @@ g）SQL信息设置完成后，单击“确定”即可。
 h）选中输出结果组件，在“响应结果”处选择输出结果信息，如图4-7、4-8所示：
 
 ![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_07.png)
+
+##### 图4-7 选择响应结果
+
+![4-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_07.png)
+
+##### 图4-8 选择输出结果信息
+
+i）在“输出项值”处，单击“未选中记录”方框，进入“填写数据”页面，如图4-9所示：
+
+![4-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_08.png)
