--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
@@ -17,3 +17,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到单函数组件，拖拽至绘图面板，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_4_1.png)
+
+##### 图1-1 找到单函数组件
+
+b）同时拖拽一个输出结果组件至绘图面板，连接好组件的流程图，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_4_2.png)
+
+##### 图1-2 连接组件流程图
+
+c）选中单函数组件，根据项目需求填写单函数组件的名称和描述，如图1-3所示：
