--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
@@ -59,3 +59,15 @@ g）单击“函数名称”处的选择记录方框选择函数名称，如图1
 ##### 说明：您也可以单击“参数信息”处的“+”按钮，根据项目需求填写参数信息，如图1-8所示。此处示例是用于生成一个随机id，故不需要添加参数。
 
 ![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_4_8.png)
+
+##### 图1-8 添加参数信息
+
+h）单击“确定“，退出填写数据页面。
+
+i）选中“输出结果”组件，单击“响应结果”处的三等号，进入选择数据页面，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_4_9.png)
+
+##### 图1-9 配置响应结果
+
+j）双击选择系统默认响应结果。
