--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/1. 单函数组件的使用.md
@@ -81,3 +81,9 @@ m）在参数选择页面，选择“单函数”页签，双击“functionExecu
 ![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_4_10.png)
 
 ##### 图1-10 选择单函数组件的执行结果
+
+n）单击“确定“，退出填写数据页面。
+
+o）配置完成后，单击“保存并退出”。
+
+p）最后提交并发布该接口即可。
