--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/2. 多函数组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/2. 多函数组件的使用.md
@@ -13,3 +13,13 @@ a）您需要拥有“流程编辑器”功能的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 2.2.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到多函数组件，拖拽至绘图面板，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_5_1.png)
+
+##### 图2-1 找到多函数组件
+
+b）同时拖拽一个输出结果组件至绘图面板，连接好组件的流程图，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_5_2.png)
