--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/2. 多函数组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/2. 多函数组件的使用.md
@@ -73,3 +73,11 @@ h）单击“参数信息”处的“+”按钮，根据项目需求填写参数
 i）输入“结果标识key”以及设置是否将该函数的输出结果作为最终的输出结果，如图2-11所示：
 
 ![2-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_5_11.png)
+
+##### 图2-11 设置结果标识及是否作为输出结果
+
+j）单击“+添加子节点”按钮来添加多条函数记录，如图2-12所示：
+
+![2-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_5_12.png)
+
+##### 图2-12 设置结果标识及是否作为输出结果
