--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/3. 子流程批处理组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/3. 子流程批处理组件的使用.md
@@ -17,3 +17,13 @@ c）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 2.3.3 操作步骤
 
 a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到子流程批处理组件，拖拽至绘图面板，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_7_1.png)
+
+##### 图3-1 找到子流程批处理组件
+
+b）拖拽所需的其他组件至绘图面板，连接好组件的流程图，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_7_2.png)
+
+##### 图3-2 连接组件流程图
