--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
@@ -5,3 +5,13 @@
 ##### 2.4.1 子流程组件
 
 系统提供该功能，您可以在系统中利用子流程组件进行可视化开发。
+
+##### 2.4.2 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）您需要在子流程管理模块建有所需的子流程。
+
+c）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.4.3 操作步骤
