--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
@@ -15,3 +15,13 @@ b）您需要在子流程管理模块建有所需的子流程。
 c）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 2.4.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到子流程组件，拖拽至绘图面板，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_6_1.png)
+
+##### 图4-1 找到子流程组件
+
+b）拖拽所需的其他组件至绘图面板，连接好组件的流程图，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_6_2.png)
