--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/4. 子流程组件的使用.md
@@ -77,3 +77,13 @@ g）配置单SQL组件。
 ##### 图4-9 示例
 
 h）配置输出结果组件。
+
+##### 注意：若输出结果需要引用某组件的执行结果，则需要在参数选择页面，选择相应的页签同时选择相应的执行结果，如图4-10所示：
+
+![4-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_6_9.png)
+
+##### 图4-10 示例
+
+i）流程图编辑完成后，单击“保存并退出”。
+
+j）最后提交并发布该接口即可。
