--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
@@ -17,3 +17,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到解压组件，拖拽至绘图面板，如图5-1所示：
 
 ![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_3_01.png)
+
+##### 图5-1 找到解压组件
+
+b）同时拖拽一个SFTP方式下载组件和一个输出结果组件至绘图面板，连接好组件的流程图，如图5-2所示：
+
+![5-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_3_02.png)
+
+##### 图5-2 连接组件流程图
+
+##### 说明：解压组件需要和文件下载组件搭配使用，故此处示例加上了一个SFTP方式下载组件。
