--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
@@ -27,3 +27,11 @@ b）同时拖拽一个SFTP方式下载组件和一个输出结果组件至绘图
 ##### 图5-2 连接组件流程图
 
 ##### 说明：解压组件需要和文件下载组件搭配使用，故此处示例加上了一个SFTP方式下载组件。
+
+c）选中SFTP方式下载组件，根据项目需求填写SFTP方式下载组件的名称和描述，如图5-3所示：
+
+![5-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_3_03.png)
+
+##### 图5-3 填写SFTP方式下载组件的基本信息
+
+d）单击”SFTP下载信息“处的未选中记录方框，进入填写数据页面，如图5-4所示：
