--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/5. 解压组件的使用.md
@@ -65,3 +65,11 @@ h）在“下载结果返回方式“处，选择”返回流对象“，如图5
 ##### 说明：因需要将以SFTP方式下载的文件进行解压，故此处选择返回流对象，当不需要解压只需要下载该文件时，也可以选择“直接下载”选项。
 
 i）单击“确定”，退出填写数据页面。
+
+j）选中“解压组件”，根据项目需求填写解压组件的名称和描述，如图5-8所示：
+
+![5-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_3_08.png)
+
+##### 图5-8 填写解压组件基本信息
+
+k）单击“解压信息“处的未选中记录方框，进入填写数据页面，如图5-9所示：
