--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -7,3 +7,11 @@
 系统提供该功能，您可以在系统中利用计数器组件进行可视化开发。
 
 ##### 2.6.2 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.6.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到计数器组件，拖拽至绘图面板，如图6-1所示：
