--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -15,3 +15,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 2.6.3 操作步骤
 
 a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到计数器组件，拖拽至绘图面板，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_1.png)
+
+##### 图6-1 找到计数器组件
+
+b）拖拽所需的其他组件至绘图面板，连接好组件的流程图，如图6-2所示：
+
+![6-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_2.png)
+
+##### 图6-2 连接组件流程图
