--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -53,3 +53,15 @@ e）根据具体项目需求，选择操作符，如图6-6所示：
 ##### 图6-6 选择操作符
 
 ##### 说明：此处示例用的是递减操作符。
+
+f）设置互斥条件组件的两条流转条件，如图6-7、6-8所示：
+
+![6-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_7.png)
+
+##### 图6-7 设置流转条件1
+
+![6-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_8.png)
+
+##### 图6-8 设置流转条件2
+
+g）选中赋值组件，单击“数据模型”处的选择记录方框，选择数据模型，如图6-9所示：
