--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -65,3 +65,15 @@ f）设置互斥条件组件的两条流转条件，如图6-7、6-8所示：
 ##### 图6-8 设置流转条件2
 
 g）选中赋值组件，单击“数据模型”处的选择记录方框，选择数据模型，如图6-9所示：
+
+![6-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_9.png)
+
+##### 图6-9 选择数据模型
+
+##### 说明：使用赋值组件时，一般需要提前创建实体模型，此处示例用到的实体模型配置如图6-10所示：
+
+![6-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_10.png)
+
+##### 图6-10 实体模型配置示例
+
+h）单击“赋值”处的模型赋值方框，为数据模型进行赋值。
