--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -87,3 +87,15 @@ h）单击“赋值”处的模型赋值方框，为数据模型进行赋值。
 ![6-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_13.png)
 
 ##### 图6-12 参数选择页面
+
+![6-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_12.png)
+
+##### 图6-13 填写模型数据页面
+
+i）选中输出结果组件，单击“响应结果”处的三等号按钮，选择响应结果，一般选择系统默认响应结果，也可自行设置，如图6-14所示：
+
+![6-14](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_14.png)
+
+##### 图6-14 选择响应结果
+
+j）单击“输出项值”处的未选中记录方框，配置输出项值。
