--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/6. 计数器组件的使用.md
@@ -109,3 +109,9 @@ j）单击“输出项值”处的未选中记录方框，配置输出项值。
 k）流程图编辑完成后，单击“保存并退出”。
 
 l）提交并发布该接口。
+
+m）本示例测试用例的响应内容如图6-16所示：
+
+![6-16](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_8_16.png)
+
+##### 图6-16 本示例最终响应内容
