--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
@@ -5,3 +5,13 @@
 ##### 2.7.1 赋值组件
 
 系统提供该功能，您可以在系统中利用赋值组件进行可视化开发。
+
+##### 2.7.2 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.7.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到赋值组件，拖拽至绘图面板，如图7-1所示：
