--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
@@ -15,3 +15,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 2.7.3 操作步骤
 
 a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到赋值组件，拖拽至绘图面板，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_01.png)
+
+##### 图7-1 找到赋值组件
+
+b）同时拖拽一个输出结果组件至绘图面板，连接好组件的流程图，如图7-2所示：
+
+![7-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_02.png)
