--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
@@ -61,3 +61,11 @@ g）在“数据列表”依次填入变量值，如图7-7、7-8所示：
 ![7-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_08.png)
 
 ##### 图7-8 示例
+
+##### 说明：此处填入的变量值，不仅可以是具体的值，还可以是函数结果或者流程变量。
+
+h）填写完成后，单击“确定”。
+
+i）选中输出结果组件，单击“响应结果”处的三等号按钮，如图7-9所示：
+
+![7-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_09.png)
