--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
@@ -69,3 +69,13 @@ h）填写完成后，单击“确定”。
 i）选中输出结果组件，单击“响应结果”处的三等号按钮，如图7-9所示：
 
 ![7-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_09.png)
+
+##### 图7-9 配置响应结果
+
+j）进入“选择数据”页面，根据项目需求选择输出结果项，如图7-10所示：
+
+![7-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_04.png)
+
+##### 图7-10 选择数据页面
+
+##### 说明：一般情况下选择系统默认响应结果。
