--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/7. 赋值组件的使用.md
@@ -89,3 +89,15 @@ k）单击“输出项值”处未选中记录方框，如图7-11所示：
 l）进入“填写数据”页面，根据项目需求选择流程变量，如图7-12所示：
 
 ![7-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_11.png)
+
+##### 图7-12 选择流程变量
+
+m）单击“请选择流程变量”方框旁边的按钮，进入“参数选择”页面，此时您可以单击“赋值组件”页签，双击对应的参数，如图7-13所示：
+
+![7-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_2_12.png)
+
+##### 图7-13 参数选择页面
+
+n）参数选择好后，单击“确定”，退出填写数据页面。
+
+o）流程图绘制完成后，单击“保存并退出”即可。
