--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
@@ -5,3 +5,11 @@
 ##### 2.8.1 输出结果组件
 
 系统提供该功能，您可以在系统中利用输出结果组件进行可视化开发。
+
+##### 2.8.2 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 2.8.3 操作步骤
