--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
@@ -13,3 +13,11 @@ a）您需要拥有“流程编辑器”功能的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 2.8.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“工具”栏目下，找到输出结果组件，拖拽至绘图面板，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_01.png)
+
+##### 图8-1 找到输出结果组件
+
+b）连接好组件的流程图，如图8-2所示：
