--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
@@ -29,3 +29,13 @@ b）连接好组件的流程图，如图8-2所示：
 c）选中输出结果组件，根据项目需求填写输出结果组件的名称和描述。
 
 d）单击“响应结果”处的三等号按钮，如图8-3所示：
+
+![8-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_08.png)
+
+##### 图8-3 配置响应结果
+
+e）进入选择数据页面，根据项目需求选择输出结果项，如图8-4所示：
+
+![8-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_04.png)
+
+##### 图8-4 选择输出结果项
