--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
@@ -39,3 +39,13 @@ e）进入选择数据页面，根据项目需求选择输出结果项，如图8
 ![8-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_04.png)
 
 ##### 图8-4 选择输出结果项
+
+##### 说明：一般情况下选择系统默认响应结果。
+
+f）单击“输出项值”的未选中记录方框，如图8-5所示：
+
+![8-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_05.png)
+
+##### 图8-5 配置输出项值
+
+g）进入填写数据页面，根据项目需求选择流程变量，如图8-6所示：
