--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/2. 工具组件/8. 输出结果组件的使用.md
@@ -49,3 +49,15 @@ f）单击“输出项值”的未选中记录方框，如图8-5所示：
 ##### 图8-5 配置输出项值
 
 g）进入填写数据页面，根据项目需求选择流程变量，如图8-6所示：
+
+![8-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_06.png)
+
+##### 图8-6 选择响应结果
+
+h）单击“确定”。
+
+i）流程图绘制完成后，单击“保存并退出”即可，如图8-7所示：
+
+![8-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_1_1_07.png)
+
+##### 图8-7 退出编辑器
