--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 3. 数据库组件
+
+#### 3.1 MongoDB组件的使用
+
+##### 3.1.1 MongoDB组件
+
+系统提供该功能，您可以利用MongoDB组件进行可视化开发，本节主要介绍MongoDB组件的简单使用流程。
+
+##### 3.1.2 前提条件
