--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -15,3 +15,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 c）您需要提前创建好MongoDB数据库资源实例，创建方式见[《SoFlu社区版基础操作指南第1.10节：新增MongoDB数据库资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#110-%E6%96%B0%E5%A2%9Emongodb%E6%95%B0%E6%8D%AE%E5%BA%93%E8%B5%84%E6%BA%90)。
 
 ##### 3.1.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“数据库”栏目下，找到MongoDB组件，拖拽至绘图面板，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_2.png)
+
+##### 图1-1 找到MongoDB组件
+
+b）同时拖拽一个输出结果组件，连接好组件的流程图，如图1-2所示：
