--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -31,3 +31,13 @@ b）同时拖拽一个输出结果组件，连接好组件的流程图，如图1
 c）选中HTTP组件，根据项目需求填写组件的名称和描述，如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_4.png)
+
+##### 图1-3 填写组件的基本信息
+
+d）单击“Mongo实例名字”处选择记录方框，进入表格选择页面，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_5.png)
+
+##### 图1-4 配置MongoDB数据库资源
+
+e）在表格选择页面，双击选择已连接好的MongoDB数据库资源，如图1-5所示：
