--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -53,3 +53,13 @@ f）输入表名，如图1-6所示：
 ##### 图1-6 填写表名
 
 g）选择功能方法，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_8.png)
+
+##### 图1-7 选择功能方法
+
+h）单击“参数信息”处的未选中记录方框，进入填写数据页面，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_9.png)
+
+##### 图1-8 配置参数信息
