--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/3. 数据库组件/1. MongoDB组件的使用.md
@@ -83,3 +83,15 @@ j）在参数选择页面，双击选择接口根参数，如图1-10所示：
 ##### 图1-11 添加表单参数
 
 k）在填写数据页面，单击“确定”。
+
+l）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果，如图1-12所示：
+
+![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_12.png)
+
+##### 图1-12 配置响应结果
+
+m）单击“输出项值”处的未选中记录方框，进入填写数据页面，如图1-13所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_6_1_13.png)
+
+##### 图1-13 配置输出项值
