Update 1. 1. Minio方式上传组件的使用.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 4. 文件组件
+
+#### 4.1 Minio方式上传组件的使用
+
+##### 4.1.1 Minio方式上传组件
+
+系统提供该功能，您可以在系统中使用Minio方式上传组件将文件以Minio方式上传至服务器。
+
+##### 4.1.2 前提条件
