--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
@@ -7,3 +7,13 @@
 系统提供该功能，您可以在系统中使用Minio方式上传组件将文件以Minio方式上传至服务器。
 
 ##### 4.1.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.1.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到Minio方式上传组件，拖至窗体视图，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_2.png)
