--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
@@ -17,3 +17,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到Minio方式上传组件，拖至窗体视图，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_2.png)
+
+##### 图1-1 找到Minio方式上传组件
+
+b）为显示效果，同时选择一个输出结果组件，拖至窗体视图，连接好组件的流程图，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_3.png)
+
+##### 图1-2 连接组件流程图
+
+c）选中Minio方式上传组件，根据项目需求填写Minio方式上传组件的名称和描述，如图1-3所示：
