--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
@@ -35,3 +35,11 @@ c）选中Minio方式上传组件，根据项目需求填写Minio方式上传组
 d）单击“Minio上传信息”处未选中记录方框，进入填写数据页面，如图1-4所示：
 
 ![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_5.png)
+
+##### 图1-4 配置Minio上传信息
+
+e）在填写数据页面，单击“资源实例名称”处的选择记录方框,选择已连好的Minio资源，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_6.png)
+
+##### 图1-5 选择资源实例
