--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/1. 1. Minio方式上传组件的使用.md
@@ -71,3 +71,11 @@ h）输入存储桶名称，如图1-10所示：
 ![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_10.png)
 
 ##### 图1-10 输入存储桶名称
+
+i）选中“输出结果”组件，单击“响应结果”处的三等号，进入选择数据页面，如图1-11所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_11.png)
+
+##### 图1-11 配置响应结果
+
+j）双击选择系统默认响应结果。
