--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 4. 文件组件
+
+#### 4.2 Minio方式下载组件的使用
+
+##### 4.2.1 Minio方式下载组件
+
+系统提供该功能，您可以在系统中使用Minio方式下载组件以Minio方式下载指定文件。
+
+##### 4.2.2 前提条件
