--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
@@ -17,3 +17,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到Minio方式下载组件，拖至窗体视图，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_6_1.png)
+
+##### 图2-1 找到Minio方式下载组件
+
+b）连接好组件的流程图，选中Minio方式下载组件，根据项目需求填写Minio方式下载组件的名称和描述，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_6_2.png)
+
+##### 图2-2 填写Minio方式下载组件的基本信息
+
+c）单击“Minio下载信息”处未选中记录方框，进入填写数据页面，如图2-3所示：
