--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
@@ -47,3 +47,11 @@ e）输入存储桶名称，如图2-6所示：
 ![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_6_7.png)
 
 ##### 图2-6 输入存储桶名称
+
+f）设置文件的下载路径，如图2-7所示：
+
+![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_6_8.png)
+
+##### 图2-7 设置下载路径
+
+##### 说明：文件的下载路径可以根据项目需求，通过选择流程变量、选择函数结果或直接输入值的方式来设置。
