--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/2. Minio方式下载组件的使用.md
@@ -55,3 +55,13 @@ f）设置文件的下载路径，如图2-7所示：
 ##### 图2-7 设置下载路径
 
 ##### 说明：文件的下载路径可以根据项目需求，通过选择流程变量、选择函数结果或直接输入值的方式来设置。
+
+g）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图2-8所示：
+
+![2-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_6_9.png)
+
+##### 图2-8 选择下载结果返回方式
+
+h）流程图编辑完成后，单击“保存并退出”。
+
+i）最后提交并发布该接口即可。
