--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -1,1 +1,7 @@
-test
+### 4. 文件组件
+
+#### 4.3 SFTP方式上传组件的使用
+
+##### 4.3.1 SFTP方式上传组件
+
+系统提供该功能，您可以在系统中使用SFTP方式上传组件将文件以SFTP方式上传至服务器，本节将介绍SFTP方式上传组件的简单使用流程。
