--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -5,3 +5,13 @@
 ##### 4.3.1 SFTP方式上传组件
 
 系统提供该功能，您可以在系统中使用SFTP方式上传组件将文件以SFTP方式上传至服务器，本节将介绍SFTP方式上传组件的简单使用流程。
+
+##### 4.3.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.3.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到“SFTP方式上传组件”，拖至窗体视图，如图3-1所示：
