--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -15,3 +15,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 4.3.3 操作步骤
 
 a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到“SFTP方式上传组件”，拖至窗体视图，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_3_1.png)
+
+##### 图3-1 找到SFTP方式上传组件
+
+b）为显示效果，同时选择一个输出结果组件，拖至窗体视图，连接好组件的流程图，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_3_2.png)
