--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -39,3 +39,9 @@ d）单击“SFTP上传信息”处未选中记录方框，进入“填写数据
 ##### 图3-4 配置SFTP上传信息
 
 e）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的SFTP资源，如图3-5所示：
+
+![3-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_3_5.png)
+
+##### 图3-5 选择资源实例
+
+f）单击“自定义上传文件”处“请选择流程变量”方框旁的按钮，选择file参数，如图3-6所示：
