--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -63,3 +63,11 @@ g）输入文件要上传的位置，如图3-8所示：
 ##### 图3-8 输入文件位置
 
 h）单击“确定”，退出填写数据页面。
+
+i）选中“输出结果”组件，单击“响应结果”处的三等号，进入选择数据页面，如图3-9所示：
+
+![3-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_3_8.png)
+
+##### 图3-9 配置响应结果
+
+j）双击选择系统默认响应结果。
