--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/3. SFTP方式上传组件的使用.md
@@ -95,3 +95,9 @@ n）单击“确定“，退出填写数据页面。
 o）流程图编辑完成后，单击“保存并退出”。
 
 p）单击“提交”，再次单击“提交”后的三个点按钮选择“发布接口”，如图3-13所示：
+
+![3-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_3_12.png)
+
+##### 图3-13 发布接口
+
+r）系统提示发布成功，再次单击“提交”后的三个点选择“测试用例”，进入测试用例页面，如图3-14所示：
