--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -5,3 +5,11 @@
 ##### 4.4.1 SFTP方式下载组件
 
 系统提供该功能，您可以在系统中使用SFTP方式下载组件以SFTP方式下载指定文件。
+
+##### 4.4.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.4.3 操作步骤
