--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -13,3 +13,13 @@ a）您需要拥有“接口管理”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 4.4.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到SFTP方式下载组件，拖至窗体视图，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_1.png)
+
+##### 图4-1 找到SFTP方式下载组件
+
+b）连接好组件的流程图，选中SFTP方式下载组件，根据项目需求填写SFTP方式下载组件的名称和描述，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_2.png)
