--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -23,3 +23,13 @@ a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到S
 b）连接好组件的流程图，选中SFTP方式下载组件，根据项目需求填写SFTP方式下载组件的名称和描述，如图4-2所示：
 
 ![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_2.png)
+
+##### 图4-2 填写SFTP方式下载组件的基本信息
+
+c）单击“SFTP下载信息”处未选中记录方框，进入填写数据页面，如图4-3所示：
+
+![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_3.png)
+
+##### 图4-3 配置SFTP下载信息
+
+d）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的SFTP资源，如图4-4、4-5所示：
