--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -33,3 +33,11 @@ c）单击“SFTP下载信息”处未选中记录方框，进入填写数据页
 ##### 图4-3 配置SFTP下载信息
 
 d）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的SFTP资源，如图4-4、4-5所示：
+
+![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_4.png)
+
+##### 图4-4 选择资源实例
+
+![4-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_5.png)
+
+##### 图4-5 参数选择页面
