--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -47,3 +47,9 @@ e）设置文件的下载路径，如图4-6所示：
 ![4-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_6.png)
 
 ##### 图4-6 设置下载路径
+
+##### 说明：文件的下载路径可以根据项目需求，通过选择流程变量、选择函数结果或直接输入值的方式来设置，本示例采用直接输入值的方式。
+
+f）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图4-7所示：
+
+![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_8.png)
