--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/4. SFTP方式下载组件的使用.md
@@ -53,3 +53,9 @@ e）设置文件的下载路径，如图4-6所示：
 f）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图4-7所示：
 
 ![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_4_8.png)
+
+##### 图4-7 选择下载结果返回方式
+
+g）流程图编辑完成后，单击“保存并退出”。
+
+h）最后提交并发布该接口即可。
